# CompileX

./: README.md  manage.py  pyproject.toml
CompileX/: asgi.py  custom_paginator.py  exemption_handler.py  settings.py  urls.py  wsgi.py
arena/: consumer.py  models.py  routing.py  serializer.py  urls.py  views.py
arena/migrations/: 0001_initial.py  0002_testcasemodel_is_public.py  0003_testcasemodel_created_at.py  0004_alter_problemmodel_p_likes.py  0005_problemmodel_is_battle.py
battlefield/: consumer.py  models.py  routing.py  serializers.py  urls.py  views.py
battlefield/migrations/: 0001_initial.py  0002_usermodel_room_id.py  0003_rename_b_id_submissionbattlemodel_room_id.py  0004_remove_submissionbattlemodel_started_at.py  0005_submissionbattlemodel_testcase_passed.py  0006_alter_submissionbattlemodel_uid.py
executer/: apps.py  consumer.py  routing.py
lambda-layer/: Dockerfile  Setup.md  app.py
utils/: compilationUtils.py  responseUtils.py  util.py
